Completed milestone6 : Implemented timer, Detected the end of the game

--- a/res/layout/game_activity.xml
+++ b/res/layout/game_activity.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android" 
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+>
+
+<TextView
+    android:id="@+id/txtTimer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="37dp"
+    android:textSize="40sp"
+    android:text="00:00:000"
+/>
+
+<GridView 
     android:id="@+id/boardView"
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
     android:columnWidth="90dp"
     android:numColumns="3"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
+    android:verticalSpacing="0dp"
+    android:horizontalSpacing="0dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
 />
+</LinearLayout>
